docs/am/4.10/overview/plugins/compatibility-matrices.md
---
description: Which Access Management 4.10 plugins work with which core product version, listed by plugin type. Find the matrix for the plugin you run.
---

# Compatibility Matrices

## Overview

This page lists the available AM plugins and provides compatibility matrices with the core product version.

## Plugins

### Factors

#### [gravitee-am-factor-call](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-call/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |

#### [gravitee-am-factor-fido2](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-fido2/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.18+      |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |

#### [gravitee-am-factor-http](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-http/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x            | 3.20       |
| 2.x            | 3.21       |
| 3.x            | 4.0+       |

#### [gravitee-am-factor-otp-sender](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-otp-sender/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.18+      |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |

#### [gravitee-am-factor-recoverycode](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-recovery-code/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |

#### [gravitee-am-factor-sms](https://download.gravitee.io/#graviteeio-ee/am/plugins/factors/gravitee-am-factor-sms/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |

### Gateway

#### [gravitee-am-gateway-handler-saml2-idp](https://download.gravitee.io/#graviteeio-ee/am/plugins/gateway/handlers/gravitee-am-gateway-handler-saml2-idp/)

| Plugin Version | AM version |
| -------------- | ---------- |
| 1.3.x          | 3.20.x     |
| 1.3.3+         | 3.20.16+   |
| 2.0.x          | 3.21.x     |
| 2.0.2+         | 3.21.12+   |
| 3.0.x          | 4.0.x+     |
| 4.0.x          | 4.5.x +    |

### IdPs

#### [gravitee-am-identity-provider-ldap](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-ldap/)

| Plugin version | AM version |
| -------------- | ---------- |
| 1.x            | 4.0 +      |
| 1.2.x          | 4.5 +      |
| 2.x            | 4.5 +      |

#### [gravitee-am-identityprovider-azure-ad](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-azure-ad/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |
| 2.x            | 4.5.x +    |

#### [gravitee-am-identityprovider-cas](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-cas/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.0+       |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |
| 4.x +          | 4.5 +      |

#### [gravitee-am-identityprovider-franceconnect](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-franceconnect/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |
| 2.x+           | 4.1+       |
| 3.x +          | 4.5+       |

#### [gravitee-am-identityprovider-http-flow](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-http-flow/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.10+      |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |
| 4.x+           | 4.5+       |

#### [gravitee-am-identityprovider-kerberos](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-kerberos/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.15+      |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |

#### [gravitee-am-identityprovider-saml](https://download.gravitee.io/#graviteeio-ee/am/plugins/idps/gravitee-am-identityprovider-saml2-generic/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.0+       |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |
| 4.x+           | 4.5+       |

### Policies

#### [gravitee-am-policy-account-linking](https://download.gravitee.io/#graviteeio-ee/am/plugins/policies/gravitee-am-policy-account-linking/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.1+       |
| 2.x            | 4.7+       |

#### [gravitee-am-policy-mfa-challenge](https://download.gravitee.io/#graviteeio-ee/am/plugins/policies/gravitee-am-policy-mfa-challenge/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |

#### [gravitee-gateway-services-ratelimit](https://download.gravitee.io/#graviteeio-apim/plugins/services/gravitee-gateway-services-ratelimit/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 2.x            | 4.9+       |

#### [gravitee-policy-ratelimit](https://download.gravitee.io/#graviteeio-apim/plugins/policies/gravitee-policy-ratelimit/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 2.x            | 4.9+       |

### Resources

#### [gravitee-am-resource-http-factor](https://download.gravitee.io/#graviteeio-ee/am/plugins/resources/gravitee-am-resource-http-factor/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 3.10+      |
| 2.x+           | 3.21+      |
| 3.x+           | 4.0+       |
| 4.x+           | 4.9+       |

#### [gravitee-am-resource-sfr](https://download.gravitee.io/#graviteeio-ee/am/plugins/resources/gravitee-am-resource-sfr/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.0+       |

#### [gravitee-am-resource-orange-contact-everyone](https://download.gravitee.io/#graviteeio-ee/am/plugins/resources/gravitee-am-resource-orange-contact-everyone/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x            | 3.20       |
| 1.3.x          | 4.0+       |

#### [gravitee-am-resource-twilio](https://download.gravitee.io/#graviteeio-ee/am/plugins/resources/gravitee-am-resource-twilio/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x+           | 4.1+       |

### Certificates

#### [gravitee-am-certificate-hsm-aws](https://download.gravitee.io/#graviteeio-ee/plugins/certificates/gravitee-am-certificate-hsm-aws/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x            | 4.6+       |
| 2.x            | 4.7+       |

### Authenticators

[**gravitee-am-authenticator-cba**](https://download.gravitee.io/#graviteeio-ee/am/plugins/authenticator/cba/gravitee-am-authenticator-cba/)

| Plugin Version | AM Version |
| -------------- | ---------- |
| 1.x            | 4.10+      |
